--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@
 #####
 [versions]
 accompanist = "0.32.0"
+arch = "2.1.0"
 androidGradlePlugin = "8.1.3"
 androidx-activity-compose = "1.8.0"
 androidx-appcompat = "1.6.1"
@@ -22,6 +23,7 @@ androidx-test-espresso = "3.5.1"
 androidx-test-ext-junit = "1.1.5"
 androidx-test-ext-truth = "1.5.0"
 mockito = "5.2.0"
+mockk = "1.13.8"
 androidx-window = "1.2.0-rc01"
 androidxHiltNavigationCompose = "1.0.0"
 androix-test-uiautomator = "2.2.0"
@@ -45,7 +47,7 @@ maps-compose = "2.5.3"
 material = "1.9.0"
 moshi = "1.14.0"
 # @keep
-minSdk = "21"
+minSdk = "26"
 okhttp = "4.10.0"
 robolectric = "4.9.2"
 rome = "1.18.0"
@@ -111,6 +113,7 @@ androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref =
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
 androidx-test-core = { module = "androidx.test:core", version.ref = "androidx-test" }
+core-testing = { module = "androidx.arch.core:core-testing", version.ref = "arch" }
 androidx-test-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "androidx-test-espresso" }
 androidx-test-ext-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-test-ext-junit" }
 androidx-test-ext-truth = { module = "androidx.test.ext:truth", version.ref = "androidx-test-ext-truth" }
@@ -118,7 +121,9 @@ androidx-test-rules = { module = "androidx.test:rules", version.ref = "androidx-
 androidx-test-runner = "androidx.test:runner:1.5.2"
 androidx-test-uiautomator = { module = "androidx.test.uiautomator:uiautomator", version.ref = "androix-test-uiautomator" }
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito" }
-mockito-inline = { module = "org.mockito:mockito-inline", version.ref = "mockito" }
+mockito-inline = { module = "org.mockito:mockito-android", version.ref = "mockito" }
+mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockito" }
+mockk = { module = "io.mockk:mockk-android", version.ref = "mockk" }
 androidx-window = { module = "androidx.window:window", version.ref = "androidx-window" }
 coil = { module = "io.coil-kt:coil", version.ref = "coil" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
