Add jacocoTestReport to Github action Enhance Readme file

--- a/.github/workflows/android_ci.yml
+++ b/.github/workflows/android_ci.yml
@@ -23,7 +23,7 @@ jobs:
         run: ./gradlew build
 
       - name: Run unit tests
-        run: ./gradlew test
+        run: ./gradlew jacocoTestReport
 
       - name: Run Android Lint
         run: ./gradlew lint
